test/bad/not_intro_wrong_not.pa
lemma bad : ~(S(S(0)) = S(0)) {
    forall x, ~(0 = S(x)) by zero_is_not_succ;
    given 0 = S(0) {
        ~(0 = S(0)) by all_elim 0;
        false by false_intro 1 2;
    }
    ~(S(S(0)) = S(0)) by not_intro 4;
}
